webpack build script add, src dit and index.js

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Четвертый проект курса Яндекс.Практикум. Интерактивная страница, где можно создать свой профиль, выложить фотографию, поставить лайк.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack"
   },
   "author": "Oleg Plotnikov",
   "license": "ISC",
